examples/errors/IllegalAssumption.bkf
assume foo: Chord -- this syntax is only valid in the prelude
